@@ -78,6 +78,11 @@
         comment = "savegame improvements"
     [/entry]
     [entry]
+        name = "Gabriel Morin (gabba)"
+        comment = "Naming hotseat players, delay shroud updates on game start."
+        ircuser = "gabm"
+    [/entry]
+    [entry]
         name = "Greg Copeland (Oracle)"
         comment = "coding; Server optimizations."
         ircuser = "BlindOracle"
